removed weird IDs, wrapped intput in first branch, modal size fixed

--- a/src/components/ControlWidget.css
+++ b/src/components/ControlWidget.css
@@ -1,3 +1,3 @@
 .modal-90w{
-    width: 500px
+    width: 30%;
 }
